kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_first_written_inside_gamma.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x0) [] -> [v0]
    n9 = Const(0x0) [] -> [v4]
    n6 = gamma [
      pred: v0
      in0: v4
      in1: %cs:arg
      in2: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, %cs, %os]
          n2 = Const(0xa) [] -> [v1]
          results: [v1, %cs:arg, %os:arg]
        }
      branch 1:
        region @s2 {
          args: [arg0, %cs, %os]
          n4 = Const(0x14) [] -> [v2]
          results: [v2, %cs:arg, %os:arg]
        }
    } -> [v5, %cs, %os]
    n8 = WriteToField(offset=0, W4) [v5, %os:n6] -> [%os]
    results: [%cs:n6, %os:n8]
  }
}
