kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_in_nested_gamma.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(0) parent s1
  s3 = gamma_branch(1) parent s1
  s4 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x2a) [] -> [v0]
    n3 = Const(0x0) [] -> [v1]
    n10 = gamma [
      pred: v1
      in0: v0
      in1: %cs:arg
      in2: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, %cs, %os]
          n4 = Const(0x1) [] -> [v2]
          n9 = gamma [
            pred: v2
            in0: arg0
            in1: %cs:arg
            in2: %os:arg
          ] {
            branch 0:
              region @s2 {
                args: [arg0, %cs, %os]
                n6 = WriteToField(offset=0, W4) [arg0, %os:arg] -> [%os]
                results: [arg0, %cs:arg, %os:n6]
              }
            branch 1:
              region @s3 {
                args: [arg0, %cs, %os]
                n8 = WriteToField(offset=0, W4) [arg0, %os:arg] -> [%os]
                results: [arg0, %cs:arg, %os:n8]
              }
          } -> [v5, %cs, %os]
          results: [v5, %cs:n9, %os:n9]
        }
      branch 1:
        region @s4 {
          args: [arg0, %cs, %os]
          results: [arg0, %cs:arg, %os:arg]
        }
    } -> [v6, %cs, %os]
    results: [%cs:n10, %os:n10]
  }
}
