kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_in_theta_with_nested_gamma.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = theta_body parent s0
  s2 = gamma_branch(0) parent s1
  s3 = gamma_branch(1) parent s1
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x0) [] -> [v0]
    n10 = theta [v0, %cs:arg, %os:arg] {
      region @s1 {
        args: [arg0, %cs, %os]
        n3 = Const(0x1) [] -> [v1]
        n8 = gamma [
          pred: v1
          in0: arg0
          in1: %cs:arg
          in2: %os:arg
        ] {
          branch 0:
            region @s2 {
              args: [arg0, %cs, %os]
              results: [arg0, %cs:arg, %os:arg]
            }
          branch 1:
            region @s3 {
              args: [arg0, %cs, %os]
              n4 = Const(0x1) [] -> [v2]
              n6 = Add [arg0, v2] -> [v4]
              results: [v4, %cs:arg, %os:arg]
            }
        } -> [v7, %cs, %os]
        n9 = Const(0x0) [] -> [v5]
        results: [v5, v7, %cs:n8, %os:n8]
      }
    } -> [v8, %cs, %os]
    n12 = WriteToField(offset=0, W4) [v8, %os:n10] -> [%os]
    results: [%cs:n10, %os:n12]
  }
}
