kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_modified_in_theta.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = theta_body parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x0) [] -> [v0]
    n9 = theta [v0, %cs:arg, %os:arg] {
      region @s1 {
        args: [arg0, %cs, %os]
        n4 = Const(0x1) [] -> [v2]
        n5 = Add [arg0, v2] -> [v3]
        n7 = Const(0xa) [] -> [v4]
        n8 = Sub [v4, v3] -> [v5]
        results: [v5, v3, %cs:arg, %os:arg]
      }
    } -> [v7, %cs, %os]
    n11 = WriteToField(offset=0, W4) [v7, %os:n9] -> [%os]
    results: [%cs:n9, %os:n11]
  }
}
