kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_read_inside_gamma.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x2a) [] -> [v0]
    n3 = Const(0x0) [] -> [v1]
    n8 = gamma [
      pred: v1
      in0: v0
      in1: %cs:arg
      in2: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, %cs, %os]
          n5 = WriteToField(offset=0, W4) [arg0, %os:arg] -> [%os]
          results: [arg0, %cs:arg, %os:n5]
        }
      branch 1:
        region @s2 {
          args: [arg0, %cs, %os]
          n7 = WriteToField(offset=0, W4) [arg0, %os:arg] -> [%os]
          results: [arg0, %cs:arg, %os:n7]
        }
    } -> [v4, %cs, %os]
    results: [%cs:n8, %os:n8]
  }
}
