kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__slot_read_output_used_in_gamma_branch.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x2a) [] -> [v0]
    n4 = Const(0x0) [] -> [v2]
    n7 = gamma [
      pred: v2
      in0: %cs:arg
      in1: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [%cs, %os]
          n5 = WriteToField(offset=0, W4) [v0, %os:arg] -> [%os]
          results: [%cs:arg, %os:n5]
        }
      branch 1:
        region @s2 {
          args: [%cs, %os]
          n6 = WriteToField(offset=0, W4) [v0, %os:arg] -> [%os]
          results: [%cs:arg, %os:n6]
        }
    } -> [%cs, %os]
    results: [%cs:n7, %os:n7]
  }
}
