kajit-ir-text/src/snapshots/kajit_ir_text__slot2reg_tests__two_slots_through_gamma.snap
---
source: kajit-ir-text/src/slot2reg_tests.rs
expression: ir
---
state_domains {
  d0 = cursor
  d1 = output
}
scopes {
  s0 = lambda_body(@0)
  s1 = gamma_branch(0) parent s0
  s2 = gamma_branch(1) parent s0
}
lambda @0 @s0 (shape: "test") {
  region @s0 {
    args: [%cs, %os]
    n1 = Const(0x1) [] -> [v0]
    n2 = Const(0x2) [] -> [v1]
    n5 = Const(0x0) [] -> [v2]
    n12 = gamma [
      pred: v2
      in0: v0
      in1: v1
      in2: %cs:arg
      in3: %os:arg
    ] {
      branch 0:
        region @s1 {
          args: [arg0, arg1, %cs, %os]
          n8 = Add [arg0, arg1] -> [v5]
          n9 = WriteToField(offset=0, W4) [v5, %os:arg] -> [%os]
          results: [arg0, arg1, %cs:arg, %os:n9]
        }
      branch 1:
        region @s2 {
          args: [arg0, arg1, %cs, %os]
          results: [arg0, arg1, %cs:arg, %os:arg]
        }
    } -> [v8, v9, %cs, %os]
    results: [%cs:n12, %os:n12]
  }
}
